<resources>
    <string name="app_name">Frogger</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Strings for activity_main -->
    <string name="str_btn_play">Play Game</string>
    <string name="str_btn_highscore">Highscore</string>
    <string name="str_btn_settings">Settings</string>
    <string name="str_btn_credits">Credits</string>
    <string name="str_btn_exit">Ende</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="links_button_text">Links</string>
    <string name="rechts_button_text">Rechts</string>
    <string name="oben_button_text">Oben</string>
    <string name="unten_button_text">Unten</string>
</resources>
