<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_play"
        android:onClick="onclick_play" />

    <Button
        android:id="@+id/btn_highscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_highscore"
        android:onClick="onclick_highscore" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_settings"
        android:onClick="onclick_settings" />

    <Button
        android:id="@+id/btn_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_credits"
        android:onClick="onclick_credits" />

</LinearLayout>
