<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context="winf114.waksh.de.frogger.GameActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:keepScreenOn="true"
        android:background="#0e2f44" />

    <ImageView
        android:id="@+id/hintergrund"
        android:src="@drawable/hintergrund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/links"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/links_button_text" />

            <Button
                android:id="@+id/rechts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rechts_button_text" />

            <Button
                android:id="@+id/oben"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oben_button_text" />

            <Button
                android:id="@+id/unten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unten_button_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#cd3700"
            android:text="Hallo Welt!"
            android:layout_gravity="center"></TextView>


    </FrameLayout>

</FrameLayout>
